# fastapi_crud

./: crud.py  pyproject.toml
app/: database.py  db_depends.py  main.py  schema.py
app/migrations/: env.py
app/migrations/versions/: 773f322f97c3_initial_migration_for_postgresql.py
app/models/: __init__.py  categories.py  posts.py
app/routers/: categories.py  posts.py
